Add h2 in html file

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <title>Vahab Rajabi</title>
   </head>
   <body>
-    <header>THIS IS A HEADER PAGE</header>
+    <header>
+      <h1>THIS IS A HEADER PAGE</h1>
+    </header>
+    <h2>this is a heading 2</h2>
   </body>
 </html>
