Add h3 from github website

--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,6 @@
       <h1>THIS IS A HEADER PAGE</h1>
     </header>
     <h2>this is a heading 2</h2>
+    <h3>Im come from GitHub</h3>
   </body>
 </html>
