--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <h1>THIS IS A HEADER PAGE</h1>
+      <h1 style="color: red;">THIS IS A HEADER PAGE</h1>
     </header>
     <h2>this is a heading 2</h2>
     <h3>Im come from GitHub</h3>
